--- a/src/common/styles/common_styles.css
+++ b/src/common/styles/common_styles.css
@@ -16,11 +16,11 @@
 }
 @font-face {
   font-family: "Montserrat-Italic";
-  src: url("../../pages/article/assets/fonts/Montserrat/Montserrat-Italic.woff2") format("woff2");
+  src: url("/youtalk/pages/src/assets/fonts/Montserrat/Montserrat-Italic.woff2") format("woff2");
 }
 @font-face {
   font-family: "OpenSans-Regular";
-  src: url("../../pages/article/assets/fonts/OpenSans/OpenSans-Regular.woff2") format("woff2");
+  src: url("/youtalk/pages/src/assets/fonts/OpenSans/OpenSans-Regular.woff2") format("woff2");
 }
 
 * {
